--- a/.github/workflows/workflow1.yml
+++ b/.github/workflows/workflow1.yml
@@ -6,6 +6,8 @@ jobs:
         steps:
           - name: Get code
             uses: actions/checkout@v3
+          - name: npm Install
+            run: npm install
           - name: Install dependencies
             run: npm ci
           - name: lint
