--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,5 +8,6 @@ jobs:
       - run: echo "first step"
   my-second-job:
     runs-on: ubuntu-latest
+    needs:  my-job-one
     steps:
       - run: echo "second step"
